2013-03-18  Ondrej Bilka  <neleai@seznam.cz>

	* sysdeps/x86_64/strlen.S: Replace with new SSE2 based
	implementation which is faster on all x86_64 architectures.
	Tested on AMD, Intel Nehalem, SNB, IVB.
	* sysdeps/x86_64/strnlen.S: Likewise.

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines):
	Remove all multiarch strlen and strnlen versions.
	* sysdeps/x86_64/multiarch/ifunc-impl-list.c: Update.
	Remove strlen and strnlen related parts.

	* sysdeps/x86_64/multiarch/strcat-sse2-unaligned.S: Update.
	Inline strlen part.
	* sysdeps/x86_64/multiarch/strcat-ssse3.S: Likewise.

	* sysdeps/x86_64/multiarch/strlen.S: Remove.
	* sysdeps/x86_64/multiarch/strlen-sse2-no-bsf.S: Likewise.
	* sysdeps/x86_64/multiarch/strlen-sse2-pminub.S: Likewise.
	* sysdeps/x86_64/multiarch/strlen-sse4.S: Likewise.
	* sysdeps/x86_64/multiarch/strnlen.S: Likewise.
	* sysdeps/x86_64/multiarch/strnlen-sse2-no-bsf.S: Likewise.

2013-03-17  Carlos O'Donell  <carlos@redhat.com>

	* manual/memory.texi (Malloc Tunable Parameters):
	Sort parameters alphabetically. Add comments for missing entries.

2013-03-17  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2013-03-16  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15283]
	* sysdeps/ieee754/ldbl-96/e_j1l.c (__ieee754_y1l): Correct test
	for arguments at most half maximum finite value.
	* math/libm-test.inc (j0_test): Add more tests.
	(j1_test): Likewise.
	(y0_test): Likewise.
	(y1_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	[BZ #14155]
	* sysdeps/ieee754/ldbl-128/e_j0l.c (__ieee754_j0l): Do not compute
	1 / x and functions P and Q for arguments above 0x1p256L.
	(__ieee754_y0l): Likewise.
	* sysdeps/ieee754/ldbl-128/e_j1l.c (__ieee754_j1l): Likewise.
	(__ieee754_y1l): Likewise.
	* math/libm-test.inc (j0_test): Do not allow spurious underflows.
	(j1_test): Likewise.
	(y0_test): Likewise.
	(y1_test): Likewise.
